--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -86,15 +86,15 @@ jobs:
         run: |
          docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
          
-      - name: Stop and remove container if running
-        run: |
-         docker ps -q --filter "name=cnncls" | grep -q . && docker stop cnncls && docker rm -fv cnncls
-      # - name: Stop and remove existing container if it exists
+      # - name: Stop and remove container if running
       #   run: |
-      #     if [ $(docker ps -q --filter "name=cnncls") ]; then
-      #       docker stop cnncls || true
-      #       docker rm cnncls || true
-      #     fi
+      #    docker ps -q --filter "name=cnncls" | grep -q . && docker stop cnncls && docker rm -fv cnncls
+      - name: Stop and remove existing container if it exists
+        run: |
+          if [ $(docker ps -q --filter "name=cnncls") ]; then
+            docker stop cnncls || true
+            docker rm cnncls || true
+          fi
        
       - name: Run Docker Image to serve users
         run: |
